# NetMonitor

./: CMakeLists.txt  DESIGN.md  HOW_RATE_LIMITING_WORKS.md  SUDO_NOPASSWD_SETUP.md  TEACHING_SCRIPT.md  TEACHING_SCRIPT_MID.md  TEACHING_SCRIPT_PRO.md  TEACHING_SCRIPT_SIMPLE.md  TEACHING_SCRIPT_STORY.md  TEACHING_VISUAL_GUIDE.md  VIDEO_AGENT_STATE.md  VIDEO_AGENT_WORKFLOW.md  build.ps1
.claude/: settings.local.json
driver/: NetMonitorDrv.c  NetMonitorDrv.h  NetMonitorDrv.inf  NetMonitorDrv.vcxproj  NetMonitorDrv.vcxproj.filters  RateLimitTable.c  WfpCallout.c  build-driver-manual.ps1  install-driver.ps1  restart-driver.cmd  restart-driver.ps1  sign-driver.cmd  sign-driver.ps1  smoke-test.ps1  uninstall-driver.ps1
src/: app.manifest  main.cpp  resource.h  resource.rc
src/core/: AlertManager.cpp  AlertManager.h  ConfigStore.cpp  ConfigStore.h  DivertLimiter.cpp  DivertLimiter.h  DriverClient.cpp  DriverClient.h  EtwMonitor.cpp  EtwMonitor.h  TokenBucket.cpp  TokenBucket.h  TrafficLogger.cpp  TrafficLogger.h  TrafficTracker.cpp  TrafficTracker.h  Types.h  WfpLimiter.cpp  WfpLimiter.h
src/gui/: Dialogs.cpp  Dialogs.h  MainWindow.cpp  MainWindow.h
src/shared/: DriverProtocol.h
tests/: test_alert_manager.cpp  test_divert_limiter.cpp  test_token_bucket.cpp  test_traffic_tracker.cpp
video-agent/: CLAUDE.md  INPUT_SPEC.md  USAGE_GUIDE.md  VIDEO_WORKFLOW.md  run.sh
video-agent/scripts/: next-tasks.sh  progress.sh  update-task.sh
